# Hobgoblin

./: CMakeLists.txt  Conan_install_dependencies.bat  Conanw.bat  cells+world.json  conanfile.py  conanw.bash
CMake/: hg_copy_test_assets.cmake
EngineCore/: CMakeLists.txt  README.md
EngineCore/Modules_L00_Foundation/S01_ManualTestFramework/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/S01_ManualTestFramework/Include/Hobgoblin/Private/: Manual_test_framework.hpp
EngineCore/Modules_L00_Foundation/S01_Preprocessor/Test/Automatic/: CMakeLists.txt  Do_before_main.hpp  Do_before_main_1.cpp  Do_before_main_2.cpp  Preprocessor_test.cpp
EngineCore/Modules_L01_Utilities/S00_Math/: CMakeLists.txt
EngineCore/Modules_L01_Utilities/S00_Math/Include/Hobgoblin/: Math.hpp
EngineCore/Modules_L01_Utilities/S00_Math/Include/Hobgoblin/Math/: Angle.hpp  Core.hpp  Hash.hpp  Triangle.hpp  Vector.hpp  Vector2.hpp
EngineCore/Modules_L01_Utilities/S00_Math/Source/: Hash.cpp
EngineCore/Modules_L01_Utilities/S00_Math/Test/: CMakeLists.txt
EngineCore/Modules_L01_Utilities/S00_Math/Test/Automatic/: CMakeLists.txt  Core_test.cpp  Vector_test.cpp
EngineCore/Modules_L01_Utilities/S01_Utility/Test/Automatic/: CMakeLists.txt  Compact_int_test.cpp  Parcel_pool_test.cpp  Stream_out_adapter_test.cpp
EngineCore/Modules_L02_Principals/S00_QAO/Test/Automatic/: Base_test.cpp  CMakeLists.txt  Priority_resolver_test.cpp  Reflection_test.cpp  Reflection_test.hpp  Reflection_test_dummy.cpp  Test_with_runtime.cpp
EngineCore/Modules_L02_Principals/S01_UWGA/: CMakeLists.txt  README.md
EngineCore/Modules_L02_Principals/S01_UWGA/Include/Hobgoblin/: UWGA.hpp
EngineCore/Modules_L02_Principals/S01_UWGA/Include/Hobgoblin/UWGA/: Anchor_utils.hpp  Batching_config.hpp  Blend_mode.hpp  Builtin_fonts.hpp  Canvas.hpp  Circle_shape.hpp  Color.hpp  Drawable.hpp  Element.hpp  Font.hpp  Glsl_shader.hpp  Glyph.hpp  Image.hpp  Opengl_utils.hpp  Primitive_type.hpp  Rectangle_shape.hpp  Render_states.hpp  Render_texture.hpp  Render_window.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Sprite_attributes.hpp  Sprite_blueprint.hpp  Sprite_loader.hpp  System.hpp  Text.hpp  Texture.hpp  Texture_packing.hpp  Texture_rect.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  Vertex_array.hpp  View.hpp  Window.hpp  Window_event.hpp  Window_style.hpp
EngineCore/Modules_L02_Principals/S01_UWGA/Include/Hobgoblin/UWGA/Private/: Draw_batching_decorator_fnl.hpp  Draw_batching_decorator_strict.hpp  Draw_batching_utils.hpp  Xmacro_html_colors.hpp
EngineCore/Modules_L02_Principals/S01_UWGA/Source/: Circle_shape.cpp  Opengl_utils.cpp  Rectangle_shape.cpp  Shape.cpp  Sprite.cpp  Sprite_attributes.cpp  Sprite_blueprint.cpp  Sprite_loader.cpp  Sprite_manifest_parser.cpp  Sprite_manifest_parser.hpp  System.cpp  Text.cpp  Texture_packing.cpp  Transformable.cpp  Vertex_array.cpp
EngineCore/Modules_L02_Principals/S01_UWGA/Source/BuiltinFonts/: Font_cmu_serif_roman.cpp  Font_cmu_typewriter_text.cpp  Font_ebgaramond12_regular.cpp  Font_inconsolata_regular.cpp  Font_titillium_webregular.cpp  Helper.hpp
EngineCore/Modules_L02_Principals/S01_UWGA/Source/MaxRectsBinPack/: Max_rects_bin_pack.cpp
EngineCore/Modules_L02_Principals/S01_UWGA/Source/SFML/: Font_impl.cpp  Font_impl.hpp  Glsl_shader_impl.cpp  Glsl_shader_impl.hpp  Image_impl.cpp  Image_impl.hpp  Render_texture_impl.hpp  Render_window_impl.cpp  Render_window_impl.hpp  SFML_conversions.hpp  SFML_drawing_adapter.hpp  SFML_err.hpp  SFML_vertices.hpp  SFML_window_event_conversion.hpp  System_impl.hpp  Text_impl.cpp  Text_impl.hpp  Texture_common_impl.hpp  Texture_impl.hpp  Texture_provider.hpp  Texture_wrapper.hpp  Transform_impl.cpp  Transform_impl.hpp  Vertex_array_impl.cpp  Vertex_array_impl.hpp  View_impl.cpp  View_impl.hpp
EngineCore/Modules_L02_Principals/S01_UWGA/Test/: CMakeLists.txt
EngineCore/Modules_L02_Principals/S01_UWGA/Test/Automatic/: CMakeLists.txt  Canvas_mock.hpp  Draw_batching_decorator_fnl_test.cpp  Sprite_loader_test.cpp
EngineCore/Modules_L02_Principals/S01_UWGA/Test/Automatic/Assets/: SpriteManifest1.txt  SpriteManifest2.txt  SpriteManifest3.txt  SpriteManifest4.txt
EngineCore/Modules_L02_Principals/S01_UWGA/Test/Manual/: CMakeLists.txt  Circleshape_in_renderwindow_test.cpp  Default_shader_test.cpp  Draw_batching_decorator_test_fnl.cpp  Empty_renderwindow_test.cpp  Invert_shader_test.cpp  Rectangleshape_in_renderwindow_test.cpp  Rendertexture_in_renderwindow_test.cpp  Sprite_loader_test.cpp  Square_in_renderwindow_test.cpp  Test_list.hpp  Text_in_renderwindow_test.cpp  Textured_vertices_in_renderwindow_test.cpp  Transform_in_renderwindow_test.cpp  UGE_manual_test.cpp  UWGA_manual_test.cpp
EngineCore/Modules_L02_Principals/S01_UWGA/Test/Performance/: CMakeLists.txt  Sprite_drawing_performance_test.cpp  Test_list.hpp  UWGA_performance_test.cpp
EngineCore/Modules_L02_Principals/S01_UnifiedGraphicsEngine/Test/Manual/: CMakeLists.txt  Empty_renderwindow_test.cpp  Square_in_renderwindow_test.cpp  Test_list.hpp  Transform_in_renderwindow_test.cpp  UGE_manual_test.cpp
EngineCore/Modules_L02_Principals/S02_RmlUi/: CMakeLists.txt
EngineCore/Modules_L02_Principals/S02_RmlUi/Include/Hobgoblin/: RmlUi.hpp
EngineCore/Modules_L02_Principals/S02_RmlUi/Include/Hobgoblin/RmlUi/: Context_driver.hpp  Hobgoblin_backend.hpp  RmlUi_preprocessing.hpp
EngineCore/Modules_L02_Principals/S02_RmlUi/Source/: Context_driver.cpp  Hobgoblin_backend.cpp  RmlUi_Hobgoblin_renderer.cpp  RmlUi_Hobgoblin_system.cpp  RmlUi_preprocessing.cpp
Tools/GridGoblinEditor/: CMakeLists.txt
Tools/GridGoblinEditor/Assets/: editor_ui.rcss  editor_ui.rcss.fp  editor_ui.rml  scroll_bar.rcss
Tools/GridGoblinEditor/Source/: Context_factory.cpp  Context_factory.hpp  Definitions.cpp  Definitions.hpp  Editor_ui_driver.cpp  Editor_ui_driver.hpp  Editor_world_driver.cpp  Editor_world_driver.hpp  GGEdit_main.cpp  Main.cpp  Priorities.hpp  Resource_holder.hpp  Resource_holder_default.cpp  Resource_holder_default.hpp  Resource_manager.hpp  Resource_manager_default.cpp  Resource_manager_default.hpp
(+299 files in other folders)
